--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port= 6001
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName = ShopDb;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=123456789
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=none
