--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <jdbc.version>11.2.0.jre11</jdbc.version>
         <jpa.version>2.7.7</jpa.version>
         <lombok.version>1.18.24</lombok.version>
+        <mapper.version>2.4.5</mapper.version>
     </properties>
     <dependencies>
         <dependency>
@@ -52,11 +53,17 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>${lombok.version}</version>
-        <scope>provided</scope>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper.extensions</groupId>
+            <artifactId>modelmapper-spring</artifactId>
+            <version>${mapper.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
