--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,11 @@
             <artifactId>modelmapper-spring</artifactId>
             <version>${mapper.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
     <build>
