--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <jpa.version>2.7.7</jpa.version>
         <lombok.version>1.18.24</lombok.version>
         <mapper.version>2.4.5</mapper.version>
+        <oath.version>2.5.2.RELEASE</oath.version>
+        <jwt.version>0.9.1</jwt.version>
     </properties>
     <dependencies>
         <dependency>
@@ -72,6 +74,17 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${oath.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
