--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${springframework.version}</version>
+        <version>2.7.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -14,7 +14,7 @@
     <name>MyNote</name>
     <description>MyNote</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
         <springframework.version>2.7.7</springframework.version>
         <jdbc.version>11.2.0.jre11</jdbc.version>
         <jpa.version>2.7.7</jpa.version>
